--- a/FlashCardGame.Core/FlashCardGame.Core.csproj
+++ b/FlashCardGame.Core/FlashCardGame.Core.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Prism.Core" Version="7.2.0.1422" />
+  </ItemGroup>
+
 </Project>
