--- a/FlashCardGame.UI/FlashCardGame.UI.csproj
+++ b/FlashCardGame.UI/FlashCardGame.UI.csproj
@@ -89,7 +89,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Resource Include="materialdesignicons-webfont.ttf" />
+    <Resource Include="Resources\materialdesignicons-webfont.ttf" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
