--- a/Modules/FlashCardGame.Modules.Game/FlashCardGame.Modules.Game.csproj
+++ b/Modules/FlashCardGame.Modules.Game/FlashCardGame.Modules.Game.csproj
@@ -66,14 +66,23 @@
     <Compile Include="Service\GameConfig.cs" />
     <Compile Include="Service\IGameConfig.cs" />
     <Compile Include="Service\IQuestionGenerator.cs" />
+    <Compile Include="Service\OperatorClassFactory.cs" />
     <Compile Include="Service\QuestionGenerator.cs" />
     <Compile Include="ViewModels\GameViewModel.cs" />
     <Compile Include="ViewModels\QuestionViewModel.cs" />
+    <Compile Include="ViewModels\ScoreBoardViewModel.cs" />
+    <Compile Include="ViewModels\TimingViewModel.cs" />
     <Compile Include="Views\GameView.xaml.cs">
       <DependentUpon>GameView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\QuestionView.xaml.cs">
       <DependentUpon>QuestionView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ScoreBoardView.xaml.cs">
+      <DependentUpon>ScoreBoardView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\TimingView.xaml.cs">
+      <DependentUpon>TimingView.xaml</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -104,6 +113,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\ScoreBoardView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\TimingView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MaterialDesignThemes">
@@ -113,6 +130,9 @@
       <Version>7.2.0.1422</Version>
     </PackageReference>
     <PackageReference Include="Prism.Wpf" Version="7.2.0.1367" />
+    <PackageReference Include="System.Reactive">
+      <Version>4.3.2</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
