--- a/FlashCardGame.Core/FlashCardGame.Core.csproj
+++ b/FlashCardGame.Core/FlashCardGame.Core.csproj
@@ -6,6 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="Prism.Core" Version="7.2.0.1422" />
+    <PackageReference Include="Serilog" Version="2.9.0" />
+    <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
   </ItemGroup>
 
 </Project>
