--- a/Tests/FlashCardGame.Modules.Game.Tests/FlashCardGame.Modules.Game.Tests.csproj
+++ b/Tests/FlashCardGame.Modules.Game.Tests/FlashCardGame.Modules.Game.Tests.csproj
@@ -16,5 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\FlashCardGame.Core\FlashCardGame.Core.csproj" />
+    <ProjectReference Include="..\..\FlashCardGame.Model\FlashCardGame.Model.csproj" />
+    <ProjectReference Include="..\..\Modules\FlashCardGame.Modules.Game\FlashCardGame.Modules.Game.csproj" />
   </ItemGroup>
 </Project>
