--- a/Modules/FlashCardGame.Modules.Game/FlashCardGame.Modules.Game.csproj
+++ b/Modules/FlashCardGame.Modules.Game/FlashCardGame.Modules.Game.csproj
@@ -66,7 +66,7 @@
     <Compile Include="Service\GameConfig.cs" />
     <Compile Include="Service\IGameConfig.cs" />
     <Compile Include="Service\IQuestionGenerator.cs" />
-    <Compile Include="Service\OperatorClassFactory.cs" />
+    <Compile Include="Service\ArithmeticOpFactory.cs" />
     <Compile Include="Service\QuestionGenerator.cs" />
     <Compile Include="ViewModels\AnswerFeedbackViewModel.cs" />
     <Compile Include="ViewModels\GameViewModel.cs" />
