--- a/Modules/FlashCardGame.Modules.Game/FlashCardGame.Modules.Game.csproj
+++ b/Modules/FlashCardGame.Modules.Game/FlashCardGame.Modules.Game.csproj
@@ -49,6 +49,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Control\NumericTextBox.cs" />
     <Compile Include="GameModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
