--- a/Modules/FlashCardGame.Modules.Game/FlashCardGame.Modules.Game.csproj
+++ b/Modules/FlashCardGame.Modules.Game/FlashCardGame.Modules.Game.csproj
@@ -64,6 +64,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Service\FileLogger.cs" />
     <Compile Include="Service\GameConfig.cs" />
     <Compile Include="Service\IGameConfig.cs" />
     <Compile Include="Service\IQuestionGenerator.cs" />
