--- a/Modules/FlashCardGame.Modules.Game/FlashCardGame.Modules.Game.csproj
+++ b/Modules/FlashCardGame.Modules.Game/FlashCardGame.Modules.Game.csproj
@@ -70,15 +70,15 @@
     <Compile Include="Service\IQuestionGenerator.cs" />
     <Compile Include="Service\QuestionGenerator.cs" />
     <Compile Include="ViewModels\AnswerFeedbackViewModel.cs" />
-    <Compile Include="ViewModels\GameViewModel.cs" />
+    <Compile Include="ViewModels\GameSettingViewModel.cs" />
     <Compile Include="ViewModels\QuestionViewModel.cs" />
     <Compile Include="ViewModels\ScoreBoardViewModel.cs" />
     <Compile Include="ViewModels\TimingViewModel.cs" />
     <Compile Include="Views\AnswerFeedbackView.xaml.cs">
       <DependentUpon>AnswerFeedbackView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\GameView.xaml.cs">
-      <DependentUpon>GameView.xaml</DependentUpon>
+    <Compile Include="Views\GameSettingView.xaml.cs">
+      <DependentUpon>GameSettingView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\QuestionView.xaml.cs">
       <DependentUpon>QuestionView.xaml</DependentUpon>
@@ -114,7 +114,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\GameView.xaml">
+    <Page Include="Views\GameSettingView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
